tests/ffi/should_fail/ccall_value_c.h

const int i;
#define j 24
